# Panda

./: .gitignore  Makefile  README  README.md  TODO  ast.ml  dune-project  example.pd  panda.opam  panda_parser.mly  panda_parser.output  parser.mly  sast.ml  scanner.mll  semantic.ml  test.ml
lib/: ast.ml  builtins.c  dune  irgen.ml  parser.mly  sast.ml  scanner.mll  semantic.ml
test/: dune  testall.sh
test/tests/: fail-funcFormalDismatch.err  fail-funcFormalDismatch.pd  fail-funcFormalTypes.err  fail-funcFormalTypes.pd  fail-parser.pd  fail-returnType.pd  fail-typeInfer.pd  fail-undelVar.pd  test-basicir.pd  test-complexprogram.pd  test-eqBinop.out  test-eqBinop.pd  test-floatArithBinop.out  test-floatArithBinop.pd  test-for.out  test-for.pd  test-func.out  test-func.pd  test-func2.out  test-func2.pd  test-funcreturn.out  test-funcreturn.pd  test-ifelse.out  test-ifelse.pd  test-intArithBinop.out  test-intArithBinop.pd  test-list.out  test-list.pd  test-opAssign.out  test-opAssign.pd  test-print.out  test-print.pd  test-typeCasting.out  test-typeCasting.pd  test-typeInfer.out  test-typeInfer.pd  test-unop.out  test-unop.pd  test-varDel.out  test-varDel.pd  (+4 more)
